--- a/app/style/style.css
+++ b/app/style/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: bisque;
 }
 
 .wrapper {
@@ -22,6 +23,8 @@
   height: 350px;
   font-size: 36px;
   padding: 25px;
+  background-color: white;
+  border-radius: 15px;
 }
 
 .keyboard {
@@ -46,6 +49,7 @@
   height: 58px;
   font-size: 24px;
   transition: 0.5s;
+  background-color: white;
 }
 .button:hover {
   background-color: antiquewhite;
@@ -88,6 +92,10 @@
 .click {
   background-color: antiquewhite;
   transform: scale(0.95);
+}
+
+.active {
+  background-color: antiquewhite;
 }
 
 /*# sourceMappingURL=style.css.map */
